== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== fixes
2021-12-06::
* https://github.com/docToolchain/docToolchain/pull/711[#712 - publishToConfluence fails when no hash is available for an uploaded image]

=== added

2021-11-30::
* https://github.com/docToolchain/docToolchain/pull/706[#706 - exportEA: Add check if diagrams shall be overwritten]

2021-11-13::
* https://github.com/docToolchain/docToolchain/pull/686[#686 - Add resourceDirs option]

=== changed

2021-12-09::
* make build output less noisy - use logger instead of println
2021-12-08::
* changed wording of landing page (thanx to Jody Winter)
2021-12-04::
* changed java download hint from oracle to https://adoptium.net/
2021-11-30::
* refactored config file
2021-11-14::
* refactored jbake template "menu.gsp"

=== fixed

2021-12-06::
* https://github.com/docToolchain/doctoolchain.github.io/issues/20[#20 some wget versions throw errors]
* https://github.com/docToolchain/doctoolchain.github.io/issues/19[#19 the wrapper stops if no java installed but you want to use docker]
2021-11-26::
* https://github.com/docToolchain/doctoolchain.github.io/issues/18[#18 gradle daemon has memory problems]
2021-11-15::
* https://github.com/docToolchain/docToolchain/pull/696[#696 - exportContributors - not everybody is rendered]
* https://github.com/docToolchain/docToolchain/pull/697[#697 - exportToMarkdown docs are not referenced correctly]

== 2.0.3 - 2021-11-11

=== added

* https://github.com/docToolchain/docToolchain/issues/681[#681 - Please reactivate single page manual on v2.0.x site]

=== fixed

2021-11-10::
* fix https://github.com/docToolchain/docToolchain/issues/693[#693 - on windows powershell, targetDir is set wrong]