@@ -13,8 +13,7 @@ DTC_HEADLESS=true
 MAIN_CONFIG_FILE=docToolchainConfig.groovy
 VERSION=2.0.3
 DISTRIBUTION_URL=https://github.com/docToolchain/docToolchain/releases/download/v${VERSION}/docToolchain-${VERSION}.zip
-
-
+export DTC_PROJECT_BRANCH=$(git branch --show-current)
 DTC_OPTS="$DTC_OPTS -PmainConfigFile=$MAIN_CONFIG_FILE --warning-mode=none --no-daemon"
 
 echo "dtcw - docToolchain wrapper V0.22"
