@@ -91,6 +91,7 @@ microsite.with {
     //
     // the base url for code files in github
     // Example: https://github.com/doctoolchain/doctoolchain/edit/master/src/docs
+    branch = System.getenv("DTC_PROJECT_BRANCH")
     gitRepoUrl = '##git-repo-url##'
 
     //
